@@ -1,6 +1,7 @@
 Revision history for Test-CleanNamespaces
 
 {{$NEXT}}
+  - switch to plain old Exporter, removing build_* subs from the API,
 
 0.19      2016-06-17 05:00:35Z
   - removed dependencies on namespace::clean, Sub::Exporter, File::Find::Rule
